[project]
name = "amplifier-module-tool-rlm"
version = "0.1.0"
description = "Recursive Language Model (RLM) tool for processing long-context content via Python REPL"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
keywords = ["ai", "agents", "llm", "long-context", "rlm", "amplifier"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.entry-points."amplifier.modules"]
tool-rlm = "amplifier_module_tool_rlm:mount"

[project.urls]
Homepage = "https://github.com/michaeljabbour/amplifier-module-tool-rlm"
Repository = "https://github.com/michaeljabbour/amplifier-module-tool-rlm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_rlm"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 60
